# opencv_testing

./: CMakeLists.txt  main.cpp  mic488.c  mic488.h
csvparser/: csvparser.c  csvparser.h
modbus/: Makefile
modbus/.libs/: libmodbus.so.5.1.0
